<resources>
    <string name="app_name">Menuing</string>

    <!-- LOGIN TEXTS -->
    <string name="login_username">User mail</string>
    <string name="login_password">Password</string>
    <string name="login_button_text">Log in</string>
    <string name="login_no_account">Create account?</string>
    <string name="title_activity_register">Menuing</string>
    <string name="register_button_text">Register</string>
    <string name="register_email">Email</string>
    <string name="register_terms_conditions">Terms and Conditions</string>
    <string name="register_terms_accept">Accept</string>
    <string name="login_logging">Logging...</string>
    <string name="user_registered">User registered</string>
    <string name="user_leged">LOGGED SUCCESSFULLY</string>

    <!-- Profile -->
    <string name="profile_title">User Profile</string>
    <string name="profile_save_button">Save profile</string>
    <string name="profile_allergies_button">My allergies</string>
    <string name="profile_tastes_button">My tastes</string>
    <string name="nom_proba">Oivle Lao</string>
    <string name="email_proba">oivle@lao.com</string>
    <string name="numero_proba">623564234</string>
    <string name="info_name">Name:</string>
    <string name="info_email">Email:</string>
    <string name="info_number">Number:</string>
    <string name="info_terms_and_conditions">terms and conditions</string>
    <string name="delete_profile">Delete profile</string>
    <string name="logout">Logout</string>

    <!-- Get a meal by ingredient and money -->
    <string name="ingredientTitleMeal">Specify your ingredients</string>
    <string name="moneyTitleMeal">How much money do you want to use</string>

    <!-- Altres -->
    <string name="other">Add other</string>
    <string name="save">Save</string>
    <string name="X">X</string>
    <string name="go_Back">Return</string>
    <string name="filter">Filter</string>

    <!-- Termes i condicions -->
    <string name="termsconditions_Title">Terms and conditions</string>
    <string name="termsconditions_bulk">Lorem ipsum i estes coses
                                        Lorem ipsum i estes coses
                                        Lorem ipsum i estes coses
                                        Lorem ipsum i estes coses
                                        Lorem ipsum i estes coses
                                        Lorem ipsum i estes coses
                                        Lorem ipsum i estes coses
                                        Lorem ipsum i estes coses
                                        Lorem ipsum i estes coses</string>

    <!-- TASTES TEXTS -->
    <string name="tastes_tittle">My tastes</string>
    <string name="tastes_selected">Selected tastes</string>
    <string name="tastes_exp">Select your tastes so when you ask for a receipt this ingredients will be considered</string>
    <string name="pGustos_MyTastes">My tastes</string>
    <string name="potatoes">Potatoes</string>
    <string name="vegetables">Vegetables</string>
    <string name="salmon">Salmon</string>

    <!-- ALLERGIES TEXTS -->
    <string name="allergies_selected">Selected allergies</string>
    <string name="allergies_exp">Select your allergies so when you ask for a receipt this ingredients will not appear</string>
    <string name="allergies_tittle">My Allergies</string>
    <string name="gluten">Gluten</string>
    <string name="milk">Milk Protein</string>
    <string name="fish">Fish</string>
    <string name="molluscs">Molluscs</string>
    <string name="crustaceans">Crustaceans</string>
    <string name="peanuts">Peanuts</string>
    <string name="nuts">Nuts</string>
    <string name="soy">Soy</string>
    <string name="celery">Celery</string>
    <string name="mustard">Mustard</string>
    <string name="sesame">Sesame</string>

    <!-- DIETS TEXTS -->
    <string name="weekly_title">My weekly diet</string>
    <string name="monthly_tittle">My monthly diet</string>

    <!-- Review una recepta -->
    <string name="reviewRecipe_Title">Recipe name</string>
    <string name="reviewRecipe_IngredientTitle">Ingredients</string>
    <string name="reviewRecipe_StepsTitle">Steps to follow</string>

    <!--WEEK days-->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>


    <!-- Menu contextual -->
    <string name="delete_element">Delete element</string>

    <!-- Recipe details -->
    <string name="get_recipe">Recipe</string>
    <string name="my_meal_title">My meal</string>
    <string name="first_dish_example">First dish</string>
    <string name="second_dish_example">Second dish</string>
    <string name="ratio_example">Ratio: 4.5/5</string>
    <string name="first_dish_name">Eggplant with tomato</string>

    <!-- Nutritionists -->
    <string name="nutritionists_list">Nutritionists List</string>

    <string name="nuti_name1">Georgia Jordan</string>
    <string name="nuti_desc1">Sport Nutrition</string>
    <string name="nuti_oferta1">10€*/30\' of chat</string>

    <string name="nuti_name2">Malcom Mix</string>
    <string name="nuti_desc2">Geiatric nutrition</string>
    <string name="nuti_oferta2">20€*/30\' of chat</string>

    <string name="nuti_name3">Coresito</string>
    <string name="nuti_desc3">Vegetarian nutrition</string>
    <string name="nuti_oferta3">15€*/40\' of chat</string>

    <string name="nutritionist_conversation">Malcom Mix</string>

    <!-- Get a Meal text -->
    <string name="get_a_meal_preference_text">Choose one of the following preferences</string>
    <string name="contact_gmail">Contact us at menuingapp@gmail.com</string>

    <string name="meal_historic">Meal history</string>
    <!--Shopping list-->
    <string name="shopping_list">My shopping list</string>

    <!--diets-->
    <string name="see_meal">See day</string>
    <string name="see_week">See week</string>
    <string name="cancel">Cancel</string>
    <string name="select_option">Select an option</string>

    <!--Errors pantalles login/register -->
    <string name="err_no_mail">Put a mail</string>
    <string name="err_wrong_mail">Put a valid mail</string>
    <string name="err_no_name">Put a user name</string>
    <string name="err_no_password">Put a password</string>
    <string name="err_short_password">Password is too short</string>
    <string name="err_no_terms_and_conditions">Please accept terms and conditions</string>
    <string name="err_login_fail">Bad credentials, login failed</string>
    <string name="err_register">Error al registrar</string>

    <!--Errors generals -->
    <string name="err_empty_field">This field cannot be empty</string>
    <string name="err_no_connection">We couldn\'t connect to the server, try again later</string>
    <string name="err_no_connection_label">Connection error</string>
    <string name="err_no_connection_btn">Go back</string>

    <!-- coses del firebase -->
    <string name="testTopic">newRecords</string>

    <!-- text weekly diet -->
    <string name="breakfast">Breaksfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>

    <!-- progress bar -->
    <string name="loading">Loading...</string>
    <string name="saving">Saving...</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="send">Send</string>
    <string name="hello">Hello! How are you?</string>

    <string name="menuing_premium">Start your Menuing Premium</string>
    <string name="advantages">Avantatges</string>

    <string name="bullted_advantages">
        \n <li>Access to personalized weekly meal planning.</li>
        \n <li>Access to personalized monthly meal planning.</li>
        \n <li>Unlimited history.</li>
    </string>


    <string name="bullted_advantages_2">
        \n <li>Only for € 4.99 per month!</li>
    </string>

    <string name="pay_instructions">Click on the next button to log in and pay with your PayPal account.</string>
    <string name="accept">You authorize Menuing to automatically charge you each month, until you cancel your subscription. Give your consent to access your Menuing subscription immediately, and agree that it is only possible to make a refund within 14 days, as long as you have not accessed Menuing. </string>

    <string name="pay">Accept and pay subscription</string>
    <string name="be_premium">Become a premium user</string>

    <string name="no_premium">You aren\'t yet a premium user ...</string>
    <string name="cancel_premium">Cancel premium</string>

    <string name="sure">Are you sure to cancel the subscription?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>




</resources>