<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/allergiesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:visibility="visible">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:hint="@string/profile_title"
            android:textSize="@dimen/smallText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/info_name"
                android:textSize="@dimen/smallText"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:hint="@string/nom_proba"
                android:textSize="@dimen/smallText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/info_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/info_email"
                android:textSize="@dimen/smallText" />


            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:hint="@string/email_proba"
                android:textSize="@dimen/smallText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/info_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/info_number"
                android:textSize="@dimen/smallText" />

            <EditText
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:hint="@string/numero_proba"
                android:textSize="@dimen/smallText"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/fab_margin">
            <Button
                android:id="@+id/edit"
                android:layout_width="@dimen/buton_width"
                android:layout_height="wrap_content"
                style="@style/profile_button_style"
                android:text="@string/profile_save_button"
                android:layout_alignParentLeft="true"/>

            <Button
                android:id="@+id/delete"
                android:layout_width="@dimen/buton_width"
                android:layout_height="wrap_content"
                android:text="@string/delete_profile"
                android:textColor="@color/colorDelete"
                style="@style/button_delete_style"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/fab_margin">
            <Button
                android:id="@+id/my_allergies"
                android:layout_width="@dimen/buton_width"
                android:layout_height="wrap_content"
                android:text="@string/profile_allergies_button"
                style="@style/profile_button_style"
                android:layout_alignParentLeft="true"/>

            <Button
                android:id="@+id/my_tastes"
                android:layout_width="@dimen/buton_width"
                android:layout_height="wrap_content"
                android:text="@string/profile_tastes_button"
                style="@style/profile_button_style"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <Button
            android:id="@+id/user_termsconditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/register_terms_conditions"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/contact_admins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_gmail"
            android:textSize="15sp" />


    </LinearLayout>

</LinearLayout>