<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealByIngredients">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            android:id="@+id/ingredientsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            android:visibility="visible">

            <TextView
                android:id="@+id/ingredientsTitle"
                style="@style/SubTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredientTitleMeal"
                />
            <ScrollView android:id="@+id/ScrollView01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@android:color/transparent"
                    android:visibility="visible">


                    <CheckBox
                        android:id="@+id/ingredient1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/celery"
                        style="@style/SmallText"/>

                    <CheckBox
                        android:id="@+id/ingredient2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crustaceans"
                        style="@style/SmallText"/>

                    <CheckBox
                        android:id="@+id/ingredient3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fish"
                        style="@style/SmallText"/>

                    <CheckBox
                        android:id="@+id/ingredient4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/molluscs"
                        style="@style/SmallText"/>

                    <CheckBox
                        android:id="@+id/ingredient5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/milk"
                        style="@style/SmallText"/>

                    <LinearLayout
                        android:id="@+id/othersLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@android:color/transparent"
                        android:visibility="visible">

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@android:color/transparent"
                        android:visibility="visible">
                        <EditText
                            android:id="@+id/otherText"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"/>
                        <Button
                            android:id="@+id/addIngredient"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/other" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/saveIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/save" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>