<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NutritionistsListActivity">

    <LinearLayout
        android:id="@+id/nutritionistsListLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/nutritionistsListTittle"
            style="@style/SubTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nutritionists_list" />

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                android:background="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"
                        android:background="@mipmap/ic_launcher"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nuti_name1"
                            android:background="@android:color/transparent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nuti_desc1"
                            android:background="@android:color/transparent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nuti_oferta1"
                            android:background="@android:color/transparent"/>
                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"
                        android:background="@mipmap/ic_launcher"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nuti_name2"
                            android:background="@android:color/transparent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nuti_desc2"
                            android:background="@android:color/transparent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nuti_oferta2"
                            android:background="@android:color/transparent"/>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"
                        android:background="@mipmap/ic_launcher"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nuti_name3"
                            android:background="@android:color/transparent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nuti_desc3"
                            android:background="@android:color/transparent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nuti_oferta3"
                            android:background="@android:color/transparent"/>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>