<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:layout_margin="@dimen/normalText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meal_historic"
            android:textColor="@color/colorBigText"
            android:textSize="@dimen/largeText"
            android:gravity="center_horizontal"/>

        <ListView
            android:id="@+id/listDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textColor="@color/colorText" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="clip_vertical">

            <Button
                android:id="@+id/add_previous_meals_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:layout_alignParentLeft="true"/>
            <Button
                android:id="@+id/delete_previous_meals_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_element"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <Button
            android:id="@+id/check_previous_meals_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_Back"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>